--- a/css/category.css
+++ b/css/category.css
@@ -10,7 +10,8 @@
     align-items: flex-start;
 }
 
-.aside {
+.aside,
+.article__aside {
     width: 260px;
     min-width: 260px;
     transition: var(--alt-transition);
@@ -87,7 +88,7 @@
 .filter-item__props {
     transition: var(--alt-transition);
     height: 100%;
-    max-height: 103px;
+    /* max-height: 103px; */
     overflow: hidden;
 }
 
@@ -111,6 +112,34 @@
     width: 9px;
     height: 6px;
     transition: all .3s;
+}
+
+.filter-item__header .hint {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+.filter-item__header .hint .hint-text {
+    position: absolute;
+    left: calc(100% + 20px);
+    top: 50%;
+    transform: translateY(-50%);
+    display: none;
+}
+
+.filter-item__header .hint .hint-btn {
+    border-radius: 50%;
+    background-color: var(--text-grey-color);
+    padding: 10px;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+}
+
+.filter-item__header .hint .hint-btn:hover ~ .hint-text {
+    display: block;
 }
 
 .filter-item__list {
@@ -309,7 +338,8 @@
     padding-bottom: 20px;
     position: relative;
     transition: var(--alt-transition);
-    margin-top: 10px;
+    padding-top: 10px;
+    box-shadow: 0px -10px 8px -4px rgba(255, 255, 255, 1);
 }
 
 .filter-item__btn::after {
@@ -579,6 +609,7 @@
 
 ul.products-pagination {
     margin-top: 50px;
+    margin-bottom: 30px;
     display: flex;
     gap: 8px;
 }
