--- a/css/product.css
+++ b/css/product.css
@@ -569,4 +569,77 @@
     padding: 10px;
 }
 
+.product-info__brand {
+    position: relative;
+    background: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+
+.product-info__brand-title {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.product-info__brand-content {
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.product-info__brand-photo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    overflow: hidden;
+    flex-basis: 110px;
+}
+
+.product-info__item.documentation {
+    flex-basis: 550px;
+}
+
+.product-info__brand-photo img {
+    object-fit: contain;
+}
+
+.product-info__brand-text {
+    max-width: 280px;
+}
+
+.product-info__brand-name {
+    font-size: 20px;
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+
+.product-info__brand-info-text {
+    font-size: 16px;
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+
+.product-info__brand-phone {
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--ruby-color);
+}
+
+.product-info__brand-img {
+    position: absolute;
+    top: 0;
+    right: -40px;
+    transform-origin: center;
+    transform: rotate(270deg);
+    height: 100%;
+    aspect-ratio: 0.8 / 1;
+    /* width: 100%; */
+    opacity: 0.2;
+}
+
 /* PRODUCT MOBILE END */
